@@ -13,7 +13,7 @@ This Work includes contributions authored by David E. Jones, not as a
 <screen xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="http://moqui.org/xsd/xml-screen-1.0.xsd"
         default-menu-title="Entity">
-    <subscreens default-item="DataEdit"/>
+    <subscreens default-item="DataImport"/>
     <widgets>
         <subscreens-panel/>
     </widgets>
